--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ repository = "https://github.com/denoland/deno"
 
 [workspace.dependencies]
 deno_ast = { version = "=0.42.2", features = ["transpiling"] }
-deno_core = { path = "../deno_core/core" } # version = "0.314.2" }
+deno_core = { git = "https://github.com/denoland/deno_core", rev = "eb03269" } # version = "0.314.2" }
 
 deno_bench_util = { version = "0.167.0", path = "./bench_util" }
 deno_lockfile = "=0.23.1"
